Added BasePath to swagger, renamed user param vuid to id and refactored config package
